--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script>
     // Replace this with your actual Render backend URL
-    const API_BASE = "https://edu-agent-backend.onrender.com";
+    const API_BASE = "https://backend-i2i0.onrender.com";
 
     async function getData() {
       try {
